--- a/Project_v2/app/src/main/res/layout/profile.xml
+++ b/Project_v2/app/src/main/res/layout/profile.xml
@@ -1,23 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_swipe_refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="24dp"
-    android:background="@color/lucky_background"
-    tools:ignore="ContentDescription, HardCodedText, Autofill, Labelfor" >
+    android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/notification_top_bar"
-        layout="@layout/top_bar"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:padding="24dp"
+        android:background="@color/lucky_background"
+        tools:ignore="ContentDescription, HardCodedText, Autofill, Labelfor">
 
+        <include
+            android:id="@+id/notification_top_bar"
+            layout="@layout/top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <!--Hide indicator if not admin using android:visibility="visible"-->
     <ImageView
@@ -157,4 +160,5 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
