--- a/Project_v2/app/src/main/res/layout/sign_up.xml
+++ b/Project_v2/app/src/main/res/layout/sign_up.xml
@@ -89,6 +89,7 @@
         android:ems="10"
         android:hint="Phone Number (optional)"
         android:inputType="phone"
+        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_secondname" />
