--- a/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
@@ -92,8 +92,8 @@
 
     <TextView
         android:id="@+id/event_details_view_organiser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="361dp"
+        android:layout_height="28dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="@string/event_description_text"
         android:textAlignment="viewStart"
@@ -106,8 +106,8 @@
 
     <TextView
         android:id="@+id/event_rules_view_organiser"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="371dp"
+        android:layout_height="31dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="@string/event_rules_text"
         android:textColor="@color/lucky_white"
@@ -164,6 +164,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_picture_organiser" />
 
+    <Button
+        android:id="@+id/location_button"
+        style="@style/ActiveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:drawableLeft="@drawable/location_icon"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/airbnbcereal_w_bd"
+        android:text="Location"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/qrcode_button"
+        app:layout_constraintVertical_bias="0.038" />
     <TextView
         android:id="@+id/geolocation_warning_view"
         android:layout_width="wrap_content"
@@ -176,7 +195,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qrcode_button" />
+        app:layout_constraintTop_toBottomOf="@+id/location_button" />
 
     <TextView
         android:id="@+id/event_countdown_view_organiser"
