--- a/Project_v2/app/src/main/res/layout/event_edit_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/event_edit_overlay.xml
@@ -17,10 +17,11 @@
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
         app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="166dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
