--- a/Project_v2/app/src/main/res/layout/admin_event_list.xml
+++ b/Project_v2/app/src/main/res/layout/admin_event_list.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -24,5 +25,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
