--- a/Project_v2/app/src/main/res/layout/event_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/event_overlay.xml
@@ -3,15 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/lucky_background"
     android:padding="24dp">
+
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar_clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/delete_event_button"
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="312dp"
         android:backgroundTint="@color/lucky_red_alert"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:padding="12dp"
@@ -24,28 +34,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/delete_event_image_button"
-        style="@style/ActiveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/lucky_red_alert"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:padding="12dp"
-        android:text="DELETE Image"
-        android:textAllCaps="false"
-        android:visibility="visible"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_event_button" />
-
-    <Button
         android:id="@+id/delete_event_qrdata_button"
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:backgroundTint="@color/lucky_red_alert"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:padding="12dp"
@@ -53,10 +46,9 @@
         android:textAllCaps="false"
         android:visibility="visible"
         app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_event_image_button" />
+        app:layout_constraintTop_toBottomOf="@+id/delete_event_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
