--- a/Project_v2/app/src/main/res/layout/homescreen_event_satus_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_event_satus_list_object.xml
@@ -72,7 +72,7 @@
             android:text="Confirmed"
             android:textColor="@color/lucky_white"
             android:textSize="16sp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/event_status_price_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
